--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="contenedor_ultimBusqueda">
           <div class="ultimasBusquedas">
-            <h1>Ultimadas Busquedas</h1>
+            <h1>Ultimas Busquedas</h1>
             <ul class="history_busqueda" id="history_busqueda"></ul>
           </div>
           <div class="gift_logo">
